--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.9",
     "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "twilio": "^5.10.2",
