--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "es2017",
     "module": "commonjs",
+    "outDir": "dist",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
-    "outDir": "dist",
-    "resolveJsonModule": true,
-    "types": ["node"],
-    "typeRoots": ["./node_modules/@types"]
+    "skipLibCheck": true
   },
-  "include": ["src/**/*", "test"],
-  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts", "tests"]
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
