--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm i && tsc"
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
